--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="background">
 <div class="homepage-container">
   <div class="flexhp" data-aos="fade-right" data-aos-duration="400" data-aos-delay="500" data-aos-once="false">
-  <i class="bx bxs-widget fa-10x coloring"></i>
+  <a href="#"><i class="bx bxs-widget fa-10x coloring"></i></a>
   <h1 class="logo-name coloring">Aprooft</h1>
   </div>
   <div class="position-relative" >
