--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -89,7 +89,7 @@
   position: relative;
   height: 50px;
   width: 100%;
-  margin: 0 5px;
+  margin: 0 5px 5px 5px;
   list-style: none;
   line-height: 50px;
 }
