side bar highlight

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -11,7 +11,7 @@
   <ul class="nav-list">
     <li>
       <%= link_to widgets_path do %>
-        <div class="nav-btn focus" id="nav-btn-products">
+        <div class="nav-btn" id="nav-btn-products">
           <i class='bx bx-spreadsheet'></i>
           <span class="links-name">Products</span>
         </div>
