--- a/app/views/shared/_analytics.html.erb
+++ b/app/views/shared/_analytics.html.erb
@@ -28,7 +28,7 @@
         </div>
         <div class="average-clicks-wrapper">
           <div class="average-clicks">
-            <h3><%= @clicks_per_widget %> </h3>
+            <h3><%= @clicks_per_widget.round() %> </h3>
             <p>Clicks per widget</p>
           </div>
         </div>
