--- a/app/assets/stylesheets/components/_analytics.scss
+++ b/app/assets/stylesheets/components/_analytics.scss
@@ -22,6 +22,7 @@
   padding: 24px 24px 0 24px;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   & h3 {
     margin-bottom: 0;
   }
@@ -45,6 +46,8 @@
 .average-session-time-wrapper,
 .average-clicks-wrapper {
   padding: 16px;
+  display: flex;
+  align-items: center;
   h3 {
     font-size: 32px;
     font-weight: bold;
@@ -66,6 +69,12 @@
   p {
     margin-bottom: 0;
   }
+}
+
+.global-session-number,
+.global-clicks,
+.global-session-time {
+  margin-right: 8px;
 }
 
 .total-session-time,
@@ -131,7 +140,7 @@
 
 .date-range {
   color: white;
-  height: 50px;
+  height: 48px;
   width: 20%;
   border-radius: 5px;
   transition: background 0.3s ease;
@@ -150,6 +159,36 @@
   padding: 8px;
   border-radius: 12px;
   font-size: 18px;
+  margin-right: 8px;
   background-color: #DBDFE2;
   border: none;
+}
+
+#select-date > form {
+  display: flex;
+  align-items: center;
+}
+
+#select-date > form > label {
+  margin-bottom: 0;
+  width: 95px;
+}
+
+.increase,
+.decrease {
+  text-align: center;
+  p {
+    margin-bottom: 0;
+  }
+  i {
+    font-size: 36px;
+  }
+}
+
+.increase {
+  color: green;
+}
+
+.decrease {
+  color: red;
 }
