--- a/app/assets/stylesheets/widgets/_edit.scss
+++ b/app/assets/stylesheets/widgets/_edit.scss
@@ -163,6 +163,21 @@
     border: none;
 }
 
+.submit-dev-btn-lg {
+    color: white;
+    height: 50px;
+    width: 50%;
+    border-radius: 5px;
+    // transition: all 0.3s ease;
+    background: #3a84de;
+    border: none;
+    &:hover {
+        background: #2762aa;
+        // color: rgb(43, 43, 43);
+        text-decoration: none;
+    }
+}
+
 #generate-dev-btn {
     white-space: normal;
 }
