--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,35 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+.navbar-aprooft {
+  width: 100%;
+  height: 70px;
+  color: aliceblue;
+  background-color: #1D1B31;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 32px;
+}
+
+.links-wrapper {
+  display: flex;
+  font-size: 18px;
+  align-items: center;
+  .sign-in {
+    margin-right: 18px;
+    width: 80px;
+  }
+  .register {
+    width: 80px;
+  }
+}
+
+.logo-name-wrapper {
+  display: flex;
+  .name {
+    font-weight: bold;
+    font-size: 32px;
+  }
+}
+
