--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,14 @@
-<div class="background">
+<%# <div class="background">
 <div class="homepage-container">
   <div class="flexhp" data-aos="fade-right" data-aos-duration="400" data-aos-delay="500" data-aos-once="false">
-  <a href="#"><i class="bx bxs-widget fa-10x coloring"></i></a>
-  <h1 class="logo-name coloring">Aprooft</h1>
+    <a href="#"><i class="bx bxs-widget fa-10x coloring"></i></a>
+    <h1 class="logo-name coloring">Aprooft</h1>
   </div>
   <div class="position-relative" >
-  <div class="flexhp bannertitle position-absolute" >
-  <i class="bx bxs-widget fa-10x coloring" style="color: #11101D; font-size: 21rem;" data-aos-easing="ease" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="700" data-aos-once="true"></i>
-  <h1 class="logo-name coloring " style="font-size: 15rem;" data-aos-easing="ease" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="700" data-aos-once="false"><strong>Aprooft</strong></h1>
-  </div>
+    <div class="flexhp bannertitle position-absolute" >
+      <i class="bx bxs-widget fa-10x coloring" style="color: #11101D; font-size: 21rem;" data-aos-easing="ease" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="700" data-aos-once="true"></i>
+      <h1 class="logo-name coloring " style="font-size: 15rem;" data-aos-easing="ease" data-aos="fade-up-right" data-aos-duration="1000" data-aos-delay="700" data-aos-once="false"><strong>Aprooft</strong></h1>
+    </div>
   </div>
 
 <div class="banner" data-aos-easing="ease" data-aos="fade-up" data-aos-duration="500" data-aos-once="true">
@@ -22,7 +22,6 @@
     </div>
     <div class="position-absolute bannertext2">
     <h2 style="color: #11101D;" data-aos-easing="ease" data-aos="fade-left" data-aos-duration="500" data-aos-delay="500" data-aos-once="true">centralize and display verified reviews from all around the internet and boost your E-rep </h2>
-  <%= link_to "Start now", widgets_path, class: "btn btn-primary" %>
     </div>
   </div>
 </div>
@@ -141,4 +140,30 @@
     Made with <i class="fas fa-heart"></i> by team Aprooft
   </div>
 </div>
+</div> %>
+<%= render  "navbar" %>
+<div class="landing-page">
+  <div class="banner-wrapper">
+      <div class="picture-wrapper">
+        <%= image_tag "YouTube-Ads-Graphic-removebg-preview.png"%>
+        <div class="triangle-wrapper">
+          <div class="blue-triangle"></div>
+          <div class="dark-triangle">
+            <h3>How it works</h3>
+          </div>
+        </div>
+      </div>
+    <div class="landing-banner">
+      <div class="cta-wrapper">
+        <div class="cta-text">
+          Bring social proofing to your website
+        </div>
+        <div class="cta-btn">
+          Start now
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="main-steps"></div>
 </div>
