--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -145,7 +145,7 @@
 <div class="landing-page">
   <div class="banner-wrapper">
       <div class="picture-wrapper">
-        <%= image_tag "YouTube-Ads-Graphic-removebg-preview.png"%>
+        <%= image_tag "landing_page_pic.png"%>
         <div class="triangle-wrapper">
           <div class="blue-triangle"></div>
           <div class="dark-triangle">
@@ -165,5 +165,58 @@
     </div>
 
   </div>
-  <div class="main-steps"></div>
+  <div class="main-steps">
+    <div class="step-one">
+      <div class="triangles-left">
+        <div class="left-blue-shape"></div>
+        <div class="left-dark-triangle">
+          <div class="step-one-text">
+            <h2>1.</h2>
+            <h3>Create a widget</h3>
+          </div>
+        </div>
+      </div>
+      <div class="mockup right">
+        <div class="mockup">
+          <%= image_tag "mockup_mac", style: "width: 550px"%>
+        </div>
+        <div class="mockup-shadow"></div>
+      </div>
+    </div>
+    <div class="step-two">
+      <div class="mockup left">
+        <div class="mockup">
+          <%= image_tag "mockup_mac", style: "width: 550px"%>
+        </div>
+        <div class="mockup-shadow"></div>
+      </div>
+      <div class="right-blue-shape"></div>
+        <div class="right-dark-triangle">
+          <div class="step-one-text">
+            <h2>1.</h2>
+            <h3>Create a widget</h3>
+          </div>
+        </div>
+      <div class="triangles-right">
+
+      </div>
+    </div>
+    <div class="step-three">
+      <div class="triangles-left">
+        <div class="left-blue-shape"></div>
+        <div class="left-dark-triangle">
+          <div class="step-one-text">
+            <h2>3.</h2>
+            <h3>Generate code</h3>
+          </div>
+        </div>
+      </div>
+      <div class="mockup-right">
+        <div class="mockup">
+          <%= image_tag "mockup_mac", style: "width: 550px"%>
+        </div>
+        <div class="mockup-shadow"></div>
+      </div>
+    </div>
+  </div>
 </div>
