--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -176,29 +176,34 @@
           </div>
         </div>
       </div>
-      <div class="mockup right">
+      <div class="mockup-right">
         <div class="mockup">
-          <%= image_tag "mockup_mac", style: "width: 550px"%>
+          <%= image_tag "mockup_mac"%>
         </div>
         <div class="mockup-shadow"></div>
       </div>
     </div>
+    <div class="styles-overview-wrapper">
+      <div class="styles-overview">
+        <div class="blue-trapezoid"></div>
+        <div class="dark-trapezoid"></div>
+      </div>
+    </div>
     <div class="step-two">
-      <div class="mockup left">
+      <div class="mockup-left">
         <div class="mockup">
-          <%= image_tag "mockup_mac", style: "width: 550px"%>
+          <%= image_tag "mockup_mac"%>
         </div>
         <div class="mockup-shadow"></div>
       </div>
-      <div class="right-blue-shape"></div>
+      <div class="triangles-right">
+        <div class="right-blue-shape"></div>
         <div class="right-dark-triangle">
           <div class="step-one-text">
-            <h2>1.</h2>
-            <h3>Create a widget</h3>
+            <h2>2.</h2>
+            <h3>Generate code</h3>
           </div>
         </div>
-      <div class="triangles-right">
-
       </div>
     </div>
     <div class="step-three">
@@ -207,13 +212,13 @@
         <div class="left-dark-triangle">
           <div class="step-one-text">
             <h2>3.</h2>
-            <h3>Generate code</h3>
+            <h3>Check analytics</h3>
           </div>
         </div>
       </div>
       <div class="mockup-right">
         <div class="mockup">
-          <%= image_tag "mockup_mac", style: "width: 550px"%>
+          <%= image_tag "mockup_mac"%>
         </div>
         <div class="mockup-shadow"></div>
       </div>
