--- a/app/views/widgets/_products_index.html.erb
+++ b/app/views/widgets/_products_index.html.erb
@@ -3,7 +3,7 @@
     <div class="product-searchbar">
       <div class="product-searchbar-field">
         <%= form_tag widgets_path, method: :get do %>
-        <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Type your product here..."%>
+        <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search for a product...", autofocus: true %>
       </div>
       <div class="product-searchbar-button">
         <%= button_tag(:class => "search-button") do %>
