--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -24,3 +24,19 @@
 .footer .fa-heart {
   color: #D23333;
 }
+
+.aprooft-footer {
+  width: 100%;
+  height: 70px;
+  color: aliceblue;
+  background-color: #1D1B31;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 32px;
+  i {
+    font-size: 24px;
+    color: aliceblue;
+    padding-right: 8px;
+  }
+}
