change sidebar logo

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,7 +2,7 @@
   <div class="logo-content">
     <%= link_to root_path do %>
       <div class="logo">
-        <%= cl_image_tag("seal_uior2x", class: 'index-page-logo', alt: 'logo') %>
+        <%= cl_image_tag("aprooft-logo_hvcs7t", class: 'index-page-logo', alt: 'logo') %>
         <div class="logo-name">Aprooft</div>
       </div>
     <% end %>
