fix 500 error on heroku

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -180,7 +180,8 @@
       </div>
       <div class="mockup-right">
         <div class="mockup">
-          <%= image_tag "mockup_mac"%>
+          <%#= image_tag "mockup_mac"%>
+          <img src="https://res.cloudinary.com/ellie-xyb/image/upload/v1630423562/mockup_mac_wdhqbx.png">
         </div>
         <div class="mockup-shadow"></div>
       </div>
@@ -275,7 +276,8 @@
     <div class="step-two">
       <div class="mockup-left">
         <div class="mockup">
-          <%= image_tag "mockup_mac"%>
+          <%#= image_tag "mockup_mac"%>
+          <img src="https://res.cloudinary.com/ellie-xyb/image/upload/v1630423562/mockup_mac_wdhqbx.png">
         </div>
         <div class="mockup-shadow"></div>
       </div>
@@ -301,7 +303,8 @@
       </div>
       <div class="mockup-right">
         <div class="mockup">
-          <%= image_tag "mockup_mac"%>
+          <%#= image_tag "mockup_mac" %>
+          <img src="https://res.cloudinary.com/ellie-xyb/image/upload/v1630423562/mockup_mac_wdhqbx.png">
         </div>
         <div class="mockup-shadow"></div>
       </div>
