put the animations back in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= stylesheet_pack_tag 'application' %>
     <title>Aprooft</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -36,6 +37,7 @@
   </head>
 
   <body>
+    <%= stylesheet_pack_tag 'application' %>
     <%= render 'shared/flashes' %>
     <%= yield %>
   </body>
