--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -188,7 +188,7 @@
         <div class="mockup-shadow"></div>
       </div>
     </div>
-    <div class="styles-overview-wrapper" data-aos-easing="ease" data-aos-anchor-placement="top-center" data-aos="flip-down" data-aos-duration="1000" data-aos-once="false">
+    <div class="styles-overview-wrapper" data-aos-easing="ease" data-aos-anchor-placement="top-center" data-aos="flip-down" data-aos-duration="1000" data-aos-once="true">
       <div class="styles-overview">
         <div class="blue-trapezoid"></div>
         <div class="dark-trapezoid">
