--- a/app/assets/stylesheets/components/_analytics.scss
+++ b/app/assets/stylesheets/components/_analytics.scss
@@ -32,6 +32,19 @@
 .average-stats {
   color: aliceblue;
   background-color: #11101d;
+}
+
+.average-stats {
+  margin-bottom: 24px;
+}
+
+.disclaimer {
+  padding-right: 24px;
+  width: 100%;
+  color: aliceblue;
+  background-color: #11101d;
+  text-align: right;
+  font-size: 12px;
   margin-bottom: 24px;
 }
 
