--- a/app/assets/stylesheets/components/_analytics.scss
+++ b/app/assets/stylesheets/components/_analytics.scss
@@ -48,6 +48,24 @@
   margin-bottom: 24px;
 }
 
+// .worst-performer-wrapper {
+//   padding: 0 24px;
+// }
+
+// .worst-performer {
+//   border-radius: 8px;
+//   padding: 8px 16px;
+//   background-color: #DBDFE2;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+// }
+
+// .worst-performer-cta {
+//   display: flex;
+//   align-items: center;
+// }
+
 .total-session-time-wrapper,
 .total-clicks-wrapper {
   padding: 24px 32px;
