--- a/app/views/shared/_analytics.html.erb
+++ b/app/views/shared/_analytics.html.erb
@@ -71,6 +71,17 @@
     <div class="disclaimer">
       <p>*Increase/Decrease compared to last week</p>
     </div>
+    <%# <div class="worst-performer-wrapper">
+      <div class="worst-performer">
+        <div class="worst-performer-text">
+          Your widget is doing worse compared to others. Take an action!
+        </div>
+        <div class="worst-performer-cta">
+          <p>edit content</p>
+          <p>check statistics </p>
+        </div>
+      </div>
+    </div> %>
     <div class="session-number-wrapper">
       <div id="select-widget">
         <%= form_with url: "", method: :get do |form| %>
