--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -146,7 +146,8 @@
   <div class="banner-wrapper">
       <div class="picture-wrapper">
         <div data-aos-easing="ease" data-aos="fade-left" data-aos-duration="2000" data-aos-once="true">
-         <%= image_tag "landing_page_pic.png"%>
+         <%#= image_tag "landing_page_pic.png"%>
+         <img src="https://res.cloudinary.com/ellie-xyb/image/upload/v1630580444/landing_page_pic_hhwtpq.png">
         </div>
         <div class="triangle-wrapper" data-aos-easing="ease" data-aos-delay="1500" data-aos="fade-up-left" data-aos-duration="700" data-aos-once="true">
           <div class="blue-triangle"></div>
