--- a/app/views/shared/_widget_stats.html.erb
+++ b/app/views/shared/_widget_stats.html.erb
@@ -10,15 +10,11 @@
       <div class="clicks-youtube-reddit-wrapper">
         <div class="youtube-clicks-chart">
             <h4>Youtube videos</h4>
-          <%= pie_chart ContentAccess.where(source: "Youtube").joins(widget: :youtubes).where(widget_id: @user_widget).group(:source_id).count.map {
-            |content_access| {content_access.first.truncate(20) => content_access.last}
-          }.inject(:merge)%>
+          <%= pie_chart @user_widget.content_accesses.where(source: 'Youtube').group(:source_id).count.map { |id, count| [Youtube.find(id).title.truncate(20), count] } %>
         </div>
         <div class="reddit-clicks-chart">
             <h4>Reddit threads</h4>
-          <%= pie_chart ContentAccess.where(source: "Reddit").joins(widget: :reddits).where(widget_id: @user_widget).group(:source_id).count.map {
-            |content_access| {content_access.first.truncate(20) => content_access.last}
-          }.inject(:merge)%>
+          <%= pie_chart @user_widget.content_accesses.where(source: 'Reddit').group(:source_id).count.map { |id, count| [Reddit.find(id).thread_title.truncate(20), count] }%>
         </div>
       </div>
     </div>
